@@ -6,33 +6,34 @@ import java.util.ArrayList;
 import java.util.Locale;
 import java.util.Scanner;
 import java.text.SimpleDateFormat;
-import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
 import java.util.Date;
 
-import br.ufrn.bti.banco1000.model.Agencia;
-
 public class Agencias {
-    private ArrayList<Agencia> agencias = new ArrayList();
+    private ArrayList<Agencia> agencias = new ArrayList<>();
+    private final SimpleDateFormat formatter = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
 
-    public Agencias(){};
-
-    public Agencia getAgencia(int codigo){
+    public Agencia getAgencia(int codigo) {
+        if (codigo <= 0) {
+            throw new IllegalArgumentException("O código da agência deve ser positivo.");
+        }
         for (Agencia agencia : agencias) {
-            if(agencia.getCodigo() == codigo) {
+            if (agencia.getCodigo() == codigo) {
                 return agencia;
             }
         }
-        System.out.println("Conta inexistente na agência!");
-        return null;
+        throw new IllegalStateException("Agência com o código " + codigo + " não encontrada.");
     }
 
     public Conta getConta(int codigo, int conta) {
-        Agencia agencia = this.getAgencia(codigo);
-        if (agencia != null) {
-            return agencia.getContaPorNumero(conta);
+        Agencia agencia = getAgencia(codigo);
+        if (agencia == null) {
+            throw new IllegalStateException("Agência inexistente.");
         }
-        return null;
+        Conta contaEncontrada = agencia.getContaPorNumero(conta);
+        if (contaEncontrada == null) {
+            throw new IllegalStateException("Conta " + conta + " não encontrada na agência " + codigo + ".");
+        }
+        return contaEncontrada;
     }
 
     public void getContas(Cliente cliente){
@@ -47,40 +48,80 @@ public class Agencias {
     }
 
     public void add(Agencia agencia) {
+        if (agencia == null) {
+            throw new IllegalArgumentException("Agência não pode ser nula.");
+        }
         agencias.add(agencia);
     }
 
-    public Conta addConta(String nome, char tipo, int senha, Cliente cliente, int agencia){
-        Conta contaNova = new Conta(nome, tipo, senha, cliente, agencia);
-        this.getAgencia(agencia).addConta(contaNova);
+    public Conta addConta(String nome, char tipo, int senha, Cliente cliente, int agenciaCodigo) {
+        if (nome == null || nome.isEmpty()) {
+            throw new IllegalArgumentException("O nome da conta não pode ser vazio.");
+        }
+        if (senha <= 0) {
+            throw new IllegalArgumentException("A senha deve ser positiva.");
+        }
+
+        Conta contaNova;
+        switch (tipo) {
+            case 'C':
+                contaNova = new ContaCorrente(nome, tipo, senha, cliente, agenciaCodigo);
+                break;
+            case 'P':
+                contaNova = new ContaPoupanca(nome, tipo, senha, cliente, agenciaCodigo);
+                break;
+            case 'S':
+                try (Scanner scan = new Scanner(System.in)) {
+                    System.out.println("Qual o CPF do seu empregador?");
+                    String cpfEmpregador = scan.nextLine();
+                    contaNova = new ContaSalario(nome, tipo, senha, cliente, agenciaCodigo, cpfEmpregador);
+                }
+                break;
+            default:
+                throw new IllegalArgumentException("Tipo de conta inválido: " + tipo);
+        }
+
+        Agencia agencia = getAgencia(agenciaCodigo);
+        agencia.addConta(contaNova);
         return contaNova;
     }
 
-    SimpleDateFormat formatter = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
-    public void salvarAgencias() throws IOException {
+    public void salvarAgencias() {
         File arquivo = new File("./LP2/banco1000/src/main/java/br/ufrn/bti/banco1000/cache/agencias.txt");
-        if (!arquivo.exists()) {
-            arquivo.createNewFile();
-        }
-        try (BufferedWriter writer = new BufferedWriter(new FileWriter(arquivo))) {
-            for (Agencia agencia : this.agencias) {
-                writer.write(String.format("Agencia:%d\n", agencia.getCodigo()));
-                for (Conta conta : agencia.getContas()) {
-                    writer.write(String.format(Locale.US, "Conta:%s,%c,%d,%.2f,%s\n",
-                            conta.getNome(),
-                            conta.getTipo(),
-                            conta.getSenha(),
-                            conta.getSaldo(),
-                            conta.getCliente().getCpf()));
-                    for (Movimentacao movimentacao : conta.getMovimentacao()) {
-                        writer.write(String.format("Movimentacao:%s,%s,%s,%.2f\n",
-                                formatter.format(movimentacao.getData()),
-                                movimentacao.getTipo(),
-                                movimentacao.getDescricao(),
-                                movimentacao.getValor()));
+        try {
+            if (!arquivo.exists() && !arquivo.createNewFile()) {
+                throw new IOException("Não foi possível criar o arquivo de salvamento.");
+            }
+            try (BufferedWriter writer = new BufferedWriter(new FileWriter(arquivo))) {
+                for (Agencia agencia : agencias) {
+                    writer.write(String.format("Agencia:%d\n", agencia.getCodigo()));
+                    for (Conta conta : agencia.getContas()) {
+                        writer.write(String.format(Locale.US, "Conta:%s,%c,%d,%.2f,%s,%d",
+                                conta.getNome(),
+                                conta.getTipo(),
+                                conta.getSenha(),
+                                conta.getSaldo(),
+                                conta.getCliente().getCpf(),
+                                conta.getNumConta()));
+                        if (conta instanceof ContaSalario) {
+                            ContaSalario salario = (ContaSalario) conta;
+                            writer.write(String.format(Locale.US, ",%s,%d",
+                                    salario.getCpfEmpregador(),
+                                    salario.getNumSaques()));
+                        }
+                        writer.write("\n");
+                        for (Movimentacao movimentacao : conta.getMovimentacao()) {
+                            writer.write(String.format("Movimentacao:%s,%s,%s,%.2f\n",
+                                    formatter.format(movimentacao.getData()),
+                                    movimentacao.getTipo(),
+                                    movimentacao.getDescricao(),
+                                    movimentacao.getValor()));
+                        }
                     }
                 }
             }
+        } catch (IOException e) {
+            System.err.println("Erro ao salvar agências: " + e.getMessage());
         }
     }
 
@@ -96,21 +137,47 @@ public class Agencias {
                     this.add(agenciaAtual);
                 } else if (linha.startsWith("Conta:") && agenciaAtual != null) {
                     String[] dados = linha.split(":")[1].split(",");
-                    if (dados.length == 5) {
+                    if (dados.length >= 6) {
                         Cliente cliente = clientes.stream()
                                 .filter(c -> c.getCpf().equals(dados[4]))
                                 .findFirst()
                                 .orElse(null);
 
                         if (cliente != null) {
-                            agenciaAtual.addConta(new Conta(
-                                    dados[0], // Nome
-                                    dados[1].charAt(0), // Tipo
-                                    Integer.parseInt(dados[2]), // Senha
-                                    cliente, // Cliente
-                                    agenciaAtual.getCodigo(), // Código da agência
-                                    Double.parseDouble(dados[3]) // Saldo
-                            ));
+                            if (dados[1].charAt(0) == 'C') {
+                                agenciaAtual.addConta(new ContaCorrente(
+                                        dados[0], // Nome
+                                        dados[1].charAt(0), // Tipo
+                                        Integer.parseInt(dados[2]), // Senha
+                                        cliente, // Cliente
+                                        agenciaAtual.getCodigo(), // Código da agência
+                                        Double.parseDouble(dados[3]), // Saldo
+                                        Integer.parseInt(dados[5]) // Numero da conta
+                                ));
+                            } else if (dados[1].charAt(0) == 'P'){
+                                agenciaAtual.addConta(new ContaPoupanca(
+                                        dados[0], // Nome
+                                        dados[1].charAt(0), // Tipo
+                                        Integer.parseInt(dados[2]), // Senha
+                                        cliente, // Cliente
+                                        agenciaAtual.getCodigo(), // Código da agência
+                                        Double.parseDouble(dados[3]), // Saldo
+                                        Integer.parseInt(dados[5]) // Numero da conta
+                                ));
+                            } else if (dados[1].charAt(0) == 'S'){
+                                agenciaAtual.addConta(new ContaSalario(
+                                        dados[0], // Nome
+                                        dados[1].charAt(0), // Tipo
+                                        Integer.parseInt(dados[2]), // Senha
+                                        cliente, // Cliente
+                                        agenciaAtual.getCodigo(), // Código da agência
+                                        Double.parseDouble(dados[3]), // Saldo
+                                        Integer.parseInt(dados[5]), // Numero da conta
+                                        dados[6], // CPF empregador
+                                        Integer.parseInt(dados[7]) // numSaques
+                                ));
+                            }
+
                         }
                     }
                 } else if (linha.startsWith("Movimentacao:") && agenciaAtual != null) {
@@ -122,7 +189,7 @@ public class Agencias {
                             String descricao = dados[2];
                             double valor = Double.parseDouble(dados[3]);
 
-                            agenciaAtual.getContas().getLast().addMovimentacao(tipo, descricao, valor, data); // Última conta criada
+                            agenciaAtual.getContas().get(agenciaAtual.getContas().size() - 1).addMovimentacao(tipo, descricao, valor, data); // Última conta criada
                         } catch (ParseException e) {
                             System.err.println("Erro ao interpretar a data: " + e.getMessage());
                         }
@@ -131,6 +198,7 @@ public class Agencias {
             }
         } catch (FileNotFoundException e) {
             // Arquivo de agencias não encontrado
+            // Código segue retornando uma array vazia
         }
     }
 }
